# DL_DVC_template

./: .gitignore  README.md  init_setup.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  template.py
research/: trials.ipynb
src/CNN_Classifier/: __init__.py
src/CNN_Classifier/utils/: __init__.py  common.py
