[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8   #we create our project in 3.8
    Operating System :: OS Independent      #this will work in all os

[options]
install_requires =
    ensure==1.0.3
python_requires = >=3.8    

[options.extras_require]
testing =
    pytest>=7.4.2
    mypy>=1.5.1
    flake8>=6.1.0
    tox>=4.11.3
    black>=23.9.1

[options.package_data]
CNN_Classifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py